# norn_rust

./: Cargo.toml
src/: functions.rs  instructions.rs  main.rs  programs.rs
src/vm/: frame.rs  machine.rs  mod.rs
src/vm/ir/: functions.rs  instructions.rs  mod.rs  programs.rs
test/: fib.nornc
